[fix] node version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup .env
         run: echo "${{ secrets.DOT_ENV }}" > .env
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-
+      - uses: actions/setup-node@v4
         with:
-          node-version: '12.x'
-
-      - name: Install dependencies
-        run: npm ci
+          node-version: 20
+      - run: npm ci
 
       - name: Build
         run: npm run build
