--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
-          source: 'build'
+          # build 안 모든 파일을 EC2로 전송
+          source: 'build/*'
           target: '/home/ubuntu/static'
           rm: true
