--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
           # build 안 모든 파일을 EC2로 전송
-          source: 'build/*'
-          target: '/home/ubuntu/static'
+          source: build/*
+          target: /home/ubuntu/static
           rm: true
