--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,4 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           # build 안 모든 파일을 EC2로 전송
           source: build/*
-          target: /home/ubuntu/static/
-          strip-components: 1
+          target: /home/ubuntu/static
