[fix] strip-component

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,4 @@ jobs:
           # build 안 모든 파일을 EC2로 전송
           source: build/*
           target: /home/ubuntu/static
+          strip-components: 1
