--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup .env
-        run: echo "${{ secrets.DOT_ENV }}" > .env
+        run: |
+          ls -al
+          echo "${{ secrets.DOT_ENV }}" > .env
 
       - uses: actions/setup-node@v4
         with:
