[fix] 배포 directory 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           # build 안 모든 파일을 EC2로 전송
           source: build/*
-          target: /home/ubuntu/static/
+          target: /home/ubuntu/nginx/static/
           strip_components: 1
